--- a/FAQ.html
+++ b/FAQ.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -76,15 +77,8 @@
 
             <h2>FAQ: Frequently Asked Questions:</h2>
 
-            <script src="field.js"></script>
 
-            <form>
-                <input class="place_for_search" type="text" id="text-to-find" value="" placeholder="Search" autofocus>
-                <input class="button_for_turn_back" type="button" onclick="javascript: FindOnPage('text-to-find',false); return false;" value="Cancel" title="cancel">
-                <input class="button_for_search" type="submit" onclick="javascript: FindOnPage('text-to-find',true); return false;" value="Search start" title="start">
-            </form>
-
-            <div class="column">
+            <div>
                 <h3>What is "battle"?</h3>
 
                 <ul>
@@ -109,8 +103,8 @@
                     The conditions after the descriptions indicate the place of the battle and other important factors. 
                     The equipment listed is the equipment specifically for this encounter.
                 </article>
+                <img src="css/confused.jpg" class="rightfig" width="350" height="250" ;>
                 <!-- ---------------------------------------------------------------------------------------------------------- -->
-                <br>
                 <h3>In the game, *character1* can peep around corners, but *character2* can't.</h3>
                 <article>This is gamemech. In reality, there are no such restrictions.</article>
                 <!-- ---------------------------------------------------------------------------------------------------------- -->
@@ -124,7 +118,7 @@
                 </ul>
 
                 <br>
-                <img src="css/confused.jpg" class="fig" width="350" height="250" ;>
+            
                 <!-- ---------------------------------------------------------------------------------------------------------- -->
                 <h3>The winner depends on which universe the fight is in.</h3>
                 <article>Combat takes place in a neutral universe under the so-called crossover rule, which means that all weapons, equipment and all 
