--- a/index.html
+++ b/index.html
@@ -71,9 +71,52 @@
             </div>
         </div>
 
-        <div>
+         <div>
 
-            <h2>Homepage</h2>
+            <h2 style="text-align: center;">Homepage</h2>
+
+            <div class="grid-container">
+                <div class="grid-child red">
+                    
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_FD6Fyn2s0c" title="YouTube video player" frameborder="2" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <p><b> Sauron VS Lich King (Lord of the Rings VS World of Warcraft) | DEATH BATTLE!</b> <br>
+                        <li>"One King to Rule Them All" - Battle Music</li>
+                        <br>
+                        <li>Streaming Link: https://spoti.fi/3hECTwr</li>
+                        <br>
+                        <li>Subscribe to Therewolf Media on YT: https://bit.ly/3KgVdoa </li>
+                        <br>
+                        <li> Get extra perks as a Death Battle Member! https://www.youtube.com/deathbattle/join</li>
+                        <br>
+                        <li>Click to SUBSCRIBE: http://bit.ly/SubToDeathBattle</li>
+                        <br>
+                        <li>OFFICIAL DEATH BATTLE SUGGESTION FORM: http://bit.ly/DBRequestForm</li>
+                        <br>
+                </p>  
+                
+                </div>
+                <div class="grid-child blue">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/EcSDxeBBolQ" title="YouTube video player" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <p><b> Batman VS Iron Man (DC VS Marvel) | DEATH BATTLE!</b> <br>
+                        <li>"Suit Yourself" - Battle Music</li>
+                        <br>
+                        <li>Download Link: https://spoti.fi/3CyXdEE</li>
+                        <br>
+                        <li>Subscribe to the musician, Brandon Yates, on YT: https://bit.ly/3gPikKj </li>
+                        <br>
+                        <li> Get extra perks as a Death Battle Member! https://www.youtube.com/deathbattle/join</li>
+                        <br>
+                        <li>Click to SUBSCRIBE: http://bit.ly/SubToDeathBattle</li>
+                        <br>
+                        <li>OFFICIAL DEATH BATTLE SUGGESTION FORM: http://bit.ly/DBRequestForm</li>
+                        <br>
+                </p>  
+                </div>
+              </div>
 
     </main>
     <footer>
