--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
                     <p><b> Sauron VS Lich King (Lord of the Rings VS World of Warcraft) | DEATH BATTLE!</b> <br>
                         <li>"One King to Rule Them All" - Battle Music</li>
                         <br>
-                        <li>Streaming Link: https://spoti.fi/3hECTwr</li>
+                        <li> <a href=" https://spoti.fi/3hECTwr">Streaming Link</a> </li>
                         <br>
-                        <li>Subscribe to Therewolf Media on YT: https://bit.ly/3KgVdoa </li>
+                        <li> <a href=" https://bit.ly/3KgVdoa">Subscribe to Therewolf Media on YT</a> </li>
                         <br>
-                        <li> Get extra perks as a Death Battle Member! https://www.youtube.com/deathbattle/join</li>
+                        <li> <a href="https://www.youtube.com/deathbattle/join"> Get extra perks as a Death Battle Member!</a> </li>
                         <br>
-                        <li>Click to SUBSCRIBE: http://bit.ly/SubToDeathBattle</li>
+                        <li> <a href="http://bit.ly/SubToDeathBattle"> Click to SUBSCRIBE </a> </li>
                         <br>
-                        <li>OFFICIAL DEATH BATTLE SUGGESTION FORM: http://bit.ly/DBRequestForm</li>
+                        <li> <a href="http://bit.ly/DBRequestForm"> OFFICIAL DEATH BATTLE SUGGESTION FORM </a> </li>
                         <br>
                 </p>  
                 
