--- a/index.html
+++ b/index.html
@@ -104,15 +104,15 @@
                     <p><b> Batman VS Iron Man (DC VS Marvel) | DEATH BATTLE!</b> <br>
                         <li>"Suit Yourself" - Battle Music</li>
                         <br>
-                        <li>Download Link: https://spoti.fi/3CyXdEE</li>
+                        <li> <a href="https://spoti.fi/3CyXdEE">Download Link</a> </li>
                         <br>
-                        <li>Subscribe to the musician, Brandon Yates, on YT: https://bit.ly/3gPikKj </li>
+                        <li> <a href="https://bit.ly/3gPikKj">Subscribe to the musician, Brandon Yates</a> </li>
                         <br>
                         <li> Get extra perks as a Death Battle Member! https://www.youtube.com/deathbattle/join</li>
                         <br>
-                        <li>Click to SUBSCRIBE: http://bit.ly/SubToDeathBattle</li>
+                        <li> <a href="http://bit.ly/SubToDeathBattle">SUBSCRIBE </a></li>
                         <br>
-                        <li>OFFICIAL DEATH BATTLE SUGGESTION FORM: http://bit.ly/DBRequestForm</li>
+                        <li> <a href="http://bit.ly/DBRequestForm">OFFICIAL DEATH BATTLE SUGGESTION FORM a></li>
                         <br>
                 </p>  
                 </div>
