--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <br>
                         <li> <a href="https://bit.ly/3gPikKj">Subscribe to the musician, Brandon Yates</a> </li>
                         <br>
-                        <li> Get extra perks as a Death Battle Member! https://www.youtube.com/deathbattle/join</li>
+                        <li> <a href="https://www.youtube.com/deathbattle/join"> Get extra perks as a Death Battle Member!</li>
                         <br>
                         <li> <a href="http://bit.ly/SubToDeathBattle">SUBSCRIBE </a></li>
                         <br>
