--- a/FAQ.html
+++ b/FAQ.html
@@ -100,7 +100,7 @@
                     The conditions after the descriptions indicate the place of the battle and other important factors. 
                     The equipment listed is the equipment specifically for this encounter.
                 </article>
-                <img src="css/confused.jpg" class="rightfig" width="350" height="250" ;>
+                <img src="css/confused.avif" class="rightfig" width="350" height="250" ;>
                 <!-- ---------------------------------------------------------------------------------------------------------- -->
                 <h3>In the game, *character1* can peep around corners, but *character2* can't.</h3>
                 <article>This is gamemech. In reality, there are no such restrictions.</article>
@@ -129,7 +129,7 @@
                 
                 <!-- ---------------------------------------------------------------------------------------------------------- -->
                 <br>
-                <img src="css/goat.jpg" class="fig" width="350" height="250" ;>
+                <img src="css/goat.avif" class="fig" width="350" height="250" ;>
 
 
             </div>
