--- a/aboutus.html
+++ b/aboutus.html
@@ -15,12 +15,12 @@
 
         <div id="scammers1">
             <a href="About_us.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
-            <img src="css/phone.png" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
+            <img src="css/phone.avif" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
             <div id="flags">
-                <a href="index.html" data-name="en" title="English"><img src="css/gb.png" alt="English">&nbsp;English</a>
-                <a href="index.html" data-name="ru" title="Russian"><img src="css/ru.png" alt="Russian">&nbsp;Russian</a>
-                <a href="index.html" data-name="kz" title="Kazakh"><img src="css/kz.png" alt="Kazakh">&nbsp;Kazakh</a>
-                <a href="index.html" data-name="ua" title="Ukraine"><img src="css/ua.jpg" alt="Ukraine">&nbsp;Ukraine</a>
+                <a href="index.html" data-name="en" title="English"><img src="css/gb.avif" alt="English">&nbsp;English</a>
+                <a href="index.html" data-name="ru" title="Russian"><img src="css/ru.avif" alt="Russian">&nbsp;Russian</a>
+                <a href="index.html" data-name="kz" title="Kazakh"><img src="css/kz.avif" alt="Kazakh">&nbsp;Kazakh</a>
+                <a href="index.html" data-name="ua" title="Ukraine"><img src="css/ua.avif" alt="Ukraine">&nbsp;Ukraine</a>
             </div>
         </div>
         <nav id="nav_menu">
@@ -56,7 +56,7 @@
         </nav>
 
 
-        <img src="css/emem.jpg" class="img_header" alt="Battle" width="100%">
+        <img src="css/emem.avif class="img_header" alt="Battle" width="100%">
 
     </header>
 
