--- a/FAQ.html
+++ b/FAQ.html
@@ -57,7 +57,7 @@
 
 
 
-        <img src="css/emem.avif" class="img_header" alt="Battle" width="100%">
+        <img src="css/emem.avif" class="img_header" alt="Battle" width="100%" height: 400 px>
 
     </header>
 
