--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </nav>
 
 
-        <img src="css/emem.jpg" class="img_header" alt="Battle" width="100%">
+        <img src="css/emem.jpg" class="img_header" alt="Battle" width="100%" height: 400 px>
 
     </header>
 
