--- a/FAQ.html
+++ b/FAQ.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport">
     <link rel="stylesheet" href="css/style.css">
     <title>FAQ | INFINITY FIGHTS</title>
 </head>
