--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <ul>
                     <li><a href="question.html">Question form for us</a></li> 
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="question.html">Contacts</a></li>
                 </ul>
                 
     
@@ -57,7 +57,7 @@
         </nav>
 
 
-        <img src="css/emem.jpg" class="img_header" alt="Battle" width="100%" height: 400 px>
+        <img src="css/emem.avif" class="img_header" alt="Battle" width="100%" height: 400 px>
 
     </header>
 
