--- a/aboutus.html
+++ b/aboutus.html
@@ -57,7 +57,7 @@
         </nav>
 
 
-        <img src="css/emem.avif class="img_header" alt="Battle" width="100%" height: 400 px>
+        <img src="css/emem.avif" class="img_header" alt="Battle" width="100%" height: 400 px>
 
     </header>
 
