--- a/formulas.html
+++ b/formulas.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/mapleleaf.ico" />
     <title>HP | INFINITY FIGHTS</title>
 </head>
 
@@ -16,12 +16,12 @@
 
         <div id="scammers1">
             <a href="About_us.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
-            <img src="css/phone..avif" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
+            <img src="css/phone.png" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
             <div id="flags">
-                <a href="index.html" data-name="en" title="English"><img src="css/gb.avif" alt="English">&nbsp;English</a>
-                <a href="index.html" data-name="ru" title="Russian"><img src="css/ru.avif" alt="Russian">&nbsp;Russian</a>
-                <a href="index.html" data-name="kz" title="Kazakh"><img src="css/kz.avif" alt="Kazakh">&nbsp;Kazakh</a>
-                <a href="index.html" data-name="ua" title="Ukraine"><img src="css/ua.avif" alt="Ukraine">&nbsp;Ukraine</a>
+                <a href="index.html" data-name="en" title="English"><img src="css/gb.png" alt="English">&nbsp;English</a>
+                <a href="index.html" data-name="ru" title="Russian"><img src="css/ru.png" alt="Russian">&nbsp;Russian</a>
+                <a href="index.html" data-name="kz" title="Kazakh"><img src="css/kz.png" alt="Kazakh">&nbsp;Kazakh</a>
+                <a href="index.html" data-name="ua" title="Ukraine"><img src="css/ua.jpg" alt="Ukraine">&nbsp;Ukraine</a>
             </div>
         </div>
         <nav id="nav_menu">
@@ -30,15 +30,15 @@
                 <li><a href="#">Welcome</a>
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
-                        <li><a href="#">Rules</a></li>
+                        <li><a href="rules.html">Rules</a></li>
                         <li><a href="#">Last shows</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Battles</a>
                     <ul>
-                        <li><a href="#">List of fights</a></li>
-                        <li><a href="#">List of profiles</a></li>
-                        <li><a href="#">Formulas</a></li>
+                        <li><a href="listoffights.html">List of fights</a></li>
+                        <li><a href="listofprofs.html">List of profiles</a></li>
+                        <li><a href="formulas.html">Formulas</a></li>
                         <li><a href="#">Similar shows</a></li>
                     </ul>
                 </li>
@@ -57,7 +57,7 @@
         </nav>
 
 
-        <img src="css/emem.avif" class="img_header" alt="Battle" width="100%" height: 400 px>
+        <img src="css/emem.jpg" class="img_header" alt="Battle" width="100%">
 
     </header>
 
@@ -73,7 +73,11 @@
 
         <div>
 
-            <h2>Homepage</h2>
+            <h2>FORMULAS</h2>
+
+            <img src="css/densityformula.png" class="img_header" alt="form1" width="100%">
+            <br>
+            <img src="css/xlr8_formula.jpg" class="img_header" alt="form2" width="100%">
 
     </main>
     <footer>
