--- a/FAQ.html
+++ b/FAQ.html
@@ -15,7 +15,7 @@
         </div>
 
         <div id="scammers1">
-            <a href="About_us.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
+            <a href="aboutus.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
             <img src="css/phone.avif" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
             <div id="flags">
                 <a href="index.html" data-name="en" title="English"><img src="css/gb.avif" alt="English">&nbsp;English</a>
@@ -27,7 +27,7 @@
         <nav id="nav_menu">
             <ul>
                 <li><a href="index.html" target="_self">Homepage</a></li>
-                <li><a href="#">Welcome</a>
+                <li><a href="index.html">Welcome</a>
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
                         <li><a href="rules.html">Rules</a></li>
@@ -47,7 +47,7 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <ul>
                     <li><a href="question.html">Question form for us</a></li> 
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="question.html">Contacts</a></li>
                 </ul>
                 
     
@@ -157,9 +157,9 @@
         <nav>
             <div id="demo-nav">
                 <h3><a href="index.html">Homepage</a></h3>
-                <h3><a href="#">Rules</a></h3>
+                <h3><a href="rules.html">Rules</a></h3>
                 <h3><a href="FAQ.html">FAQ</a></h3>
-                <h3><a href="#">About Us</a></h3>
+                <h3><a href="aboutus">About Us</a></h3>
             </div>
         </nav>
         <p class="p2">Copyright 2022 ©
