--- a/FAQ.html
+++ b/FAQ.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="scammers">
-            <a href="consultat.html" target="_blank">FAQ: Frequently Asked Questions</a>
+            <a href="FAQ.html" target="_blank">FAQ: Frequently Asked Questions</a>
         </div>
 
         <div id="scammers1">
