--- a/FAQ.html
+++ b/FAQ.html
@@ -159,7 +159,7 @@
                 <h3><a href="index.html">Homepage</a></h3>
                 <h3><a href="rules.html">Rules</a></h3>
                 <h3><a href="FAQ.html">FAQ</a></h3>
-                <h3><a href="aboutus">About Us</a></h3>
+                <h3><a href="aboutus.html">About Us</a></h3>
             </div>
         </nav>
         <p class="p2">Copyright 2022 ©
