--- a/SSvsRaizo.html
+++ b/SSvsRaizo.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="scammers">
-            <a href="index.html" target="_blank">Homepage</a>
+            <a href="SSvsRaizo.html" target="_blank">Storm Shadow VS Raizo</a>
         </div>
 
         <div id="scammers1">
