--- a/listoffights.html
+++ b/listoffights.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="scammers">
-            <a href="index.html" target="_blank">Homepage</a>
+            <a href="listoffights.html" target="_blank">Fights</a>
         </div>
 
         <div id="scammers1">
@@ -27,7 +27,7 @@
         <nav id="nav_menu">
             <ul>
                 <li><a href="index.html" target="_self">Homepage</a></li>
-                <li><a href="#">Welcome</a>
+                <li><a href="index.html">Welcome</a>
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
                         <li><a href="rules.html">Rules</a></li>
@@ -79,24 +79,18 @@
                 <tr>
                   <td><a href="SSvsRaizo.html">Storm Shadow VS Raizo</a></td>
                   <td><a href="#">Zabuza VS Moreau</a></td>
-                  <td><a href="#">Deadpool VS Black Noir</a></td>
-                  <td><a href="#">Shredder VS Talon</a></td>
+                  <td><a href="DeadpoolvsNoir.html">Deadpool VS Black Noir</a></td>
+                  <td><a href="ShreddervsTalon.html">Shredder VS Talon</a></td>
                 </tr>
-                <tr>
-                    <td><a href="SSvsRaizo.html">Storm Shadow VS Raizo</a></td>
-                    <td><a href="#">Zabuza VS Moreau</a></td>
-                    <td><a href="#">Deadpool VS Black Noir</a></td>
-                    <td><a href="#">Shredder VS Talon</a></td>
-                  </tr>
                 </table>
 
     </main>
     <footer>
         <div id="demo-nav">
             <h3><a href="index.html">Homepage</a></h3>
-            <h3><a href="#">Rules</a></h3>
+            <h3><a href="rules.html">Rules</a></h3>
             <h3><a href="FAQ.html">FAQ</a></h3>
-            <h3><a href="#">About Us</a></h3>
+            <h3><a href="aboutus.html">About Us</a></h3>
         </div>
     </nav>
         <p class="p2">Copyright 2022 ©
