--- a/listoffights.html
+++ b/listoffights.html
@@ -80,10 +80,11 @@
                   <td><a href="SSvsRaizo.html">Storm Shadow VS Raizo</a>
                       <img src="css/SSvsRaizo2.jpg" class="fig" width="500" height="350" ;>
                     </td>
-                  <td><a href="ZabuzavsMoreau.html">Zabuza VS Moreau</a></td>
+                  <td><a href="ZabuzavsMoreau.html">Zabuza VS Moreau</a>
                     <img src="css/q9nIHhh29rw.jpg" class="fig" width="500" height="350" ;>
+                      </td>
                   <td><a href="DeadpoolvsNoir.html">Deadpool VS Black Noir</a>
-                    <img src="css/BNvsDP2.jpg.jpg" class="fig" width="400" height="350" ;>
+                    <img src="css/BNvsDP2.jpg" class="fig" width="400" height="350" ;>
                     </td>
                   <td><a href="ShreddervsTalon.html">Shredder VS Talon</a>
                     <img src="css/SHvsTL2.jpg" class="fig" width="400" height="350" ;>
