--- a/profile_talon.html
+++ b/profile_talon.html
@@ -4,24 +4,23 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="images/mapleleaf.ico" />
     <title>IF : Talon</title>
 </head>
 
 <body>
     <header>
         <div class="scammers">
-            <a href="index.html" target="_blank">Homepage</a>
+            <a href="profile_talon.html" target="_blank">Talon</a>
         </div>
 
         <div id="scammers1">
             <a href="About_us.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
-            <img src="css/phone.png" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
+            <img src="css/phone.avif" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
             <div id="flags">
-                <a href="index.html" data-name="en" title="English"><img src="css/gb.png" alt="English">&nbsp;English</a>
-                <a href="index.html" data-name="ru" title="Russian"><img src="css/ru.png" alt="Russian">&nbsp;Russian</a>
-                <a href="index.html" data-name="kz" title="Kazakh"><img src="css/kz.png" alt="Kazakh">&nbsp;Kazakh</a>
-                <a href="index.html" data-name="ua" title="Ukraine"><img src="css/ua.jpg" alt="Ukraine">&nbsp;Ukraine</a>
+                <a href="index.html" data-name="en" title="English"><img src="css/gb.avif" alt="English">&nbsp;English</a>
+                <a href="index.html" data-name="ru" title="Russian"><img src="css/ru.avif" alt="Russian">&nbsp;Russian</a>
+                <a href="index.html" data-name="kz" title="Kazakh"><img src="css/kz.avif" alt="Kazakh">&nbsp;Kazakh</a>
+                <a href="index.html" data-name="ua" title="Ukraine"><img src="css/ua.avif" alt="Ukraine">&nbsp;Ukraine</a>
             </div>
         </div>
         <nav id="nav_menu">
@@ -47,7 +46,7 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <ul>
                     <li><a href="question.html">Question form for us</a></li> 
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="question.html">Contacts</a></li>
                 </ul>
                 
     
@@ -57,7 +56,7 @@
         </nav>
 
 
-        <img src="css/emem.jpg" class="img_header" alt="Battle" width="100%">
+        <img src="css/emem.avif" class="img_header" alt="Battle" width="100%">
 
     </header>
 
@@ -149,9 +148,9 @@
         <nav>
             <div id="demo-nav">
                 <h3><a href="index.html">Homepage</a></h3>
-                <h3><a href="#">Rules</a></h3>
+                <h3><a href="rules.html">Rules</a></h3>
                 <h3><a href="FAQ.html">FAQ</a></h3>
-                <h3><a href="#">About Us</a></h3>
+                <h3><a href="aboutus.html">About Us</a></h3>
             </div>
         </nav>
         <p class="p2">Copyright 2022 ©
