--- a/question.html
+++ b/question.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <div class="scammers">
-            <a href="index.html" target="_blank">Homepage</a>
+            <a href="question.html" target="_blank">Questionaire</a>
         </div>
 
         <div id="scammers1">
-            <a href="About_us.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
+            <a href="aboutus.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
             <img src="css/phone.avif" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
             <div id="flags">
                 <a href="index.html" data-name="en" title="English"><img src="css/gb.avif" alt="English">&nbsp;English</a>
