--- a/rules.html
+++ b/rules.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="scammers">
-            <a href="index.html" target="_blank">Homepage</a>
+            <a href="rules.html" target="_blank">Rules</a>
         </div>
 
         <div id="scammers1">
@@ -27,14 +27,14 @@
         <nav id="nav_menu">
             <ul>
                 <li><a href="index.html" target="_self">Homepage</a></li>
-                <li><a href="#">Welcome</a>
+                <li><a href="index.html">Welcome</a>
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
                         <li><a href="rules.html">Rules</a></li>
                         <li><a href="#">Last shows</a></li>
                     </ul>
                 </li>
-                <li><a href="#">Battles</a>
+                <li><a href="listoffights.html">Battles</a>
                     <ul>
                         <li><a href="listoffights.html">List of fights</a></li>
                         <li><a href="listofprofs.html">List of profiles</a></li>
@@ -47,7 +47,7 @@
                 <li><a href="aboutus.html">About Us</a></li>
                 <ul>
                     <li><a href="question.html">Question form for us</a></li> 
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="question.html">Contacts</a></li>
                 </ul>
                 
     
