--- a/ShreddervsTalon.html
+++ b/ShreddervsTalon.html
@@ -115,7 +115,7 @@
             <h3><a href="aboutus.html">About Us</a></h3>
         </div>
     </nav>
-        <p class="p2">Copyright 2022 ©
+        <p class="p2">Copyright 2022 ©</p>
     </footer>
 </body>
 
