--- a/profile_Raizo.html
+++ b/profile_Raizo.html
@@ -170,7 +170,7 @@
                 <h3><a href="#">About Us</a></h3>
             </div>
         </nav>
-        <p class="p2">Copyright 2022 ©
+        <p class="p2">Copyright 2022 ©</p>
     </footer>
 </body>
 
