--- a/profile_talon.html
+++ b/profile_talon.html
@@ -153,7 +153,7 @@
                 <h3><a href="aboutus.html">About Us</a></h3>
             </div>
         </nav>
-        <p class="p2">Copyright 2022 ©
+        <p class="p2">Copyright 2022 ©</p>
     </footer>
 </body>
 
