--- a/profile_Raizo.html
+++ b/profile_Raizo.html
@@ -31,7 +31,7 @@
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
                         <li><a href="rules.html">Rules</a></li>
-                        <li><a href="#">Last shows</a></li>
+                        <li><a href="lastshows.html">Last shows</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Battles</a>
