--- a/profile_shredder.html
+++ b/profile_shredder.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="scammers">
-            <a href="index.html" target="_blank">Homepage</a>
+            <a href="profile_shredder.html" target="_blank">Shredder</a>
         </div>
 
         <div id="scammers1">
@@ -30,7 +30,7 @@
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
                         <li><a href="rules.html">Rules</a></li>
-                        <li><a href="#">Last shows</a></li>
+                        <li><a href="lastshows.html">Last shows</a></li>
                     </ul>
                 </li>
                 <li><a href="listoffights.html">Battles</a>
