--- a/profile_talon.html
+++ b/profile_talon.html
@@ -14,7 +14,7 @@
         </div>
 
         <div id="scammers1">
-            <a href="About_us.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
+            <a href="aboutus.html">&nbsp;&nbsp;Do you need any assistance?</a> &nbsp;&nbsp;&nbsp;
             <img src="css/phone.avif" alt="phone">&nbsp;Call us on <a href="tel:+1-111-111-1111" title="+1-111-111-1111">&nbsp;+1 111 111 1111</a>
             <div id="flags">
                 <a href="index.html" data-name="en" title="English"><img src="css/gb.avif" alt="English">&nbsp;English</a>
@@ -30,7 +30,7 @@
                     <ul>
                         <li><a href="index.html">Homepage</a></li>
                         <li><a href="rules.html">Rules</a></li>
-                        <li><a href="#">Last shows</a></li>
+                        <li><a href="lastshows.html">Last shows</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Battles</a>
