--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="scammers">
-            <a href="index.html" target="_blank">Homepage</a>
+            <a href="aboutus.html" target="_blank">About us</a>
         </div>
 
         <div id="scammers1">
@@ -71,9 +71,9 @@
             </div>
         </div>
 
-        <div>
-
-            <h2>Homepage</h2>
+        <div> <p> The idea of the show is to pit two or more fictional characters against each other in a simulated fight to the death, referred to as a "Infinity Fights ". 
+            Matchups are decided based on the popularity of requests, debatability, entertainment, and theme.</p>
+        </div>
 
     </main>
     <footer>
