--- a/listofprofs.html
+++ b/listofprofs.html
@@ -101,11 +101,11 @@
                     </td>
                 </tr>
                  <tr>
-                  <td><a href="profile_shredder.html">Zabuza</a>
-                      <img src="css/shredder1.jpg" class="fig" width="300" height="350" ;>
+                  <td><a href="profile_zabuza.html">Zabuza</a>
+                      <img src="css/zabuza1.jpg" class="fig" width="300" height="350" ;>
                     </td>
-            <td><a href="profile_talon.html">Moreau </a>
-                      <img src="css/talon1.jpg" class="fig" width="300" height="350" ;>
+            <td><a href="profile_moreau.html">Moreau </a>
+                      <img src="css/mor1.jpg" class="fig" width="300" height="350" ;>
                     </td>
                 </tr>
                 </table>
