--- a/profile_moreau.html
+++ b/profile_moreau.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
-    <title>IF : Black Noir</title>
+    <title>IF : Moreau</title>
 </head>
 
 <body>
