--- a/listoffights.html
+++ b/listoffights.html
@@ -80,7 +80,7 @@
                   <td><a href="SSvsRaizo.html">Storm Shadow VS Raizo</a>
                       <img src="css/SSvsRaizo2.jpg" class="fig" width="500" height="350" ;>
                     </td>
-                  <td><a href="ZabuzavsMoreau.html">Zabuza VS Moreau</a>
+                  <td><a href="ZabuzaVSMoreau.html">Zabuza VS Moreau</a>
                     <img src="css/q9nIHhh29rw.jpg" class="fig" width="500" height="350" ;>
                       </td>
                     </tr>
