--- a/formulas.html
+++ b/formulas.html
@@ -74,9 +74,9 @@
 
             <h2>FORMULAS</h2>
 
-            <img src="css/densityformula.png" class="img_header" alt="form1" width="100%">
+            <img src="css/densityformula.png" class="img_header" alt="form1" width="100%" border= "3px solid #000000">
             <br>
-            <img src="css/xlr8_formula.jpg" class="img_header" alt="form2" width="100%">
+            <img src="css/xlr8_formula.jpg" class="img_header" alt="form2" width="100%"  border= "3px solid #000000">
 
     </main>
     <footer>
